# rai-sdk-python

./: .flake8  .gitignore  CHANGELOG.md  README.md  config.spec  publish  release  release-build  release-upload  requirements.txt  setenv  setup.py
.github/actions/test/: action.yml
.github/workflows/: build.yaml  publish-snowflake-sdk-pypi.yaml  publish.yaml
examples/: cancel_transaction.py  clone_database.py  config.py  create_account.py  create_compute.py  create_database.py  create_engine.py  create_oauth_client.py  create_user.py  delete_async_transaction.py  delete_compute.py  delete_database.py  delete_engine.py  delete_model.py  delete_models.py  delete_oauth_client.py  delete_source.py  delete_transaction.py  delete_user.py  disable_user.py  enable_user.py  execute.py  execute_async.py  execute_v1.py  get_account.py  get_async_transaction.py  get_compute.py  get_database.py  get_engine.py  get_model.py  get_oauth_client.py  get_source.py  get_transaction.py  get_transaction_metadata.py  get_transaction_results.py  get_txn_state.py  get_user.py  get_userid.py  install_model.py  install_models.py  (+30 more)
examples/snowflake/: create_database.py  list_databases.py  use_database.py
railib/: __init__.py  api.py  client_credentials_service.py  config.py  credentials.py  rai_config.py  rest.py  results.py  show.py  utilities.py  utils.py
railib/pb/: __init__.py  message_pb2.py  schema_pb2.py
railib/snowpark/: README.md  api.py
relationalai-sdk-snowflake/: README.md  pyproject.toml
relationalai-sdk-snowflake/relationalai/snowflake_sdk/: __init__.py  api.py
relationalai-sdk-snowflake/test/: test_integration.py  test_integration_snowflake.py
relationalai-snowflake-sdk/: README.md  pyproject.toml
relationalai-snowflake-sdk/relationalai/snowflake_sdk/: api.py
relationalai-snowflake-sdk/test/: logger.config  test_integration_snowflake.py
test/: disable_test_integration.py  logger.config  metadata.pb  metadata.pb.txt  test_integration.py  test_integration_snowflake.py  test_unit.py
tests/: integration.py  unit_tests.py
