[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["relationalai"]
namespaces = true

[project]
name = "relationalai-snowflake-sdk"
description = "# The RelationalAI Software Development Kit for Snowflake Snowpark Python"
license = { text = "http://www.apache.org/licenses/LICENSE-2.0" }
readme = "README.md"
authors = [
    {name = "RelationalAI, Inc.", email = "support@relational.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.7"
dependencies = ["snowflake-snowpark-python"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "relationalai.snowflake_sdk.__version__"}